feat: update gitconfig to set gpg program

--- a/chezmoid.dev.toml
+++ b/chezmoid.dev.toml
@@ -4,3 +4,4 @@
     git_signingkey = "<signingkey>"
     git_lfs_required = "<true|false>"
     git_gpgsign = "<true|false>"
+    git_gpgprogram = ""
